<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">漫悠悠漫画</string>
    <string name="random_read">随心看</string>
    <string name="recommend_list">编辑推荐</string>
    <string name="top_list">TOP50</string>
    <string name="category_item_text">搞笑</string>
    <string name="category_title">分类</string>
    <string name="offline_read">离线阅读</string>
    <string name="downloading_tab">下载中</string>
    <string name="downloaded_tab">已下载</string>
    <string name="settings">设置</string>
    <string name="select_path">选择路径</string>
    <string name="check_new_version">新版本检测</string>
    <string name="about">关于我们</string>
    <string name="recent_read">最近看过</string>
    <string name="search">搜索</string>
    <string name="search_you_want">找你想看的</string>
    <string name="search_result">搜索结果</string>
    <string name="they_are_searching">他们正在搜</string>
    <string name="book_name">漫画名称</string>
    <string name="author">作者: %s</string>
    <string name="category">题材: %s</string>
    <string name="size">大小: %.2f M</string>
    <string name="update_time">更新: %s</string>
    <string name="new_comment">最新吐槽</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="chapter_contents">章节</string>
    <string name="it_is_start">到头了</string>
    <string name="read_finish">这部看完啦~ 摇一摇看更多</string>
    <string name="empty">请检查网络</string>
    <string name="no_more_data">没有更多了</string>
    <string name="download_started">开始下载</string>
    <string name="download_in_process">正在下载</string>
    <string name="download_done">已经下载</string>
    <string name="percent_0">0%</string>
    <string name="no_image">没有图片</string>
    <string name ="no_comment">暂无评论</string>
    
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="tencent_qq">企鹅QQ</string>
    <string name="wechat">微信</string>
   	<string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="auth_success">认证成功</string>
    
    <string name="sina_weibo_cancel_download">\t取消下载</string>
    
    <string name="no_download_items">您还没有离线下载呢~</string>
    <string name="no_read_history">您还没有阅读记录哟~</string>
    <string name="start_to_use">翻翻喜欢的~开启您的二次元之旅吧</string>
    
    <string name="humer">搞笑</string>
    <string name="hot_blood">热血</string>
    <string name="science_fiction">科幻</string>
    <string name="fantasy">奇幻</string>
    <string name="love">恋爱</string>
    <string name="life">生活</string>
    <string name="sport">体育</string>
    <string name="ratiocination">推理</string>
    <string name="terror">恐怖</string>
    <string name="history">历史</string>
    <string name="tanbi">耽美</string>
    <string name="other">其他</string>
    <string name="homosex">同人</string>
    
    <string name="storage_name">存储卡 %d</string>
    <string name="storage_path">路径：%s</string>
    <string name="no_extral_storage">没有外置sd卡</string>
    <string name="muu_intr">漫悠悠原创漫画网是专门为原创漫画作者、漫画爱好者提供在线漫画发布的原创漫画平台，专业从事原创动漫的平台运营、推广和增值服务的创新性原创漫画在线平台运营商。</string>
	
    
    <string name="no_update">已为最新版本</string>
    <string name="update_dialog_title">升级新版本</string>
    <string name="update_intro">欢迎体验漫悠悠最新版本。</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="succ_to_download">下载成功</string>
    <string name="fail_to_download">下载失败</string>
    
    <string name="introduction">Cartoon description.</string>
    <string name="chapter_idx_dot">%d.</string>
    <string name="page">%1$d/%2$d</string>
    <string name="chapter_name">Chapter name</string>
    <string name="to_be_done">To be done.</string>

    <!-- content description strings -->
    <string name="content_des_place_holder">Place holder</string>
</resources>
