<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="315dp"
    android:layout_height="wrap_content">
    <TextView 
        android:id="@+id/tv_title"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/update_dialog_title" 
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        style="@style/ActionBarTitleTextAppearence"
        />
    
    <ImageView 
        android:id="@+id/imv_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp" 
        android:src="@color/light_gray"
        android:layout_below="@id/tv_title"
        android:contentDescription="@string/content_des_place_holder"
        />
    
    <TextView 
        android:id="@+id/tv_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_divider"
        android:text="@string/update_intro" 
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    
    <RelativeLayout 
        android:id="@+id/tab_btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/tv_introduction">
        <View
            android:id="@+id/middle"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/btn_cancel"
            android:layout_alignBottom="@+id/btn_cancel"
            android:background="@drawable/ic_btn_tab_divider" />
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_marginRight="1dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/middle"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <Button 
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_marginLeft="1dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@id/middle"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RelativeLayout>

</RelativeLayout>
