<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    
    <ImageView
        android:id="@+id/imv_icon"
        android:layout_width="105dp"
        android:layout_height="148dp"
        android:gravity="center"
        android:contentDescription="@string/content_des_place_holder"
        android:src="@drawable/book_icon" />
    
    <ImageView 
		android:id="@+id/imv_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/imv_icon"
        android:layout_alignTop="@id/imv_icon"
        android:background="@drawable/ic_close"
        android:clickable="true"
		android:contentDescription="@string/content_des_place_holder"
		android:visibility="gone"
        />
    
    <TextView 
        android:id="@+id/tv_percent"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/imv_icon"
        android:background="@color/transparent_black"
        android:gravity="center"
		style="@style/TopicTextAppearence"
        android:text="@string/percent_0"
        />
    
    <TextView
        android:id="@+id/tv_name"
        style="@style/BookNameAppearence"
        android:layout_below="@id/imv_icon"
        android:layout_width="105dp"
        android:layout_height="21dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/book_name" />

</RelativeLayout>
