<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="280dp"  >
    <ImageView 
        android:id="@+id/imv_ver_middle"
        android:layout_width="fill_parent"
        android:layout_height="1dp" 
        android:src="@color/gray"
        android:layout_centerVertical="true"
        android:contentDescription="@string/content_des_place_holder"
        />
    
    <ImageView 
        android:id="@+id/imv_hor_middle"
        android:layout_width="1dp"
        android:layout_height="fill_parent" 
        android:src="@color/gray"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_des_place_holder"
        />
    
	<RelativeLayout 
	    android:id="@+id/rl_first_line"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/imv_ver_middle"
	    >
	    <TextView 
	        android:id="@+id/tv_first_middler_ph"
	        android:layout_height="0dp"
	        android:layout_width="0dp"
	        android:layout_centerHorizontal="true"
	        />
	    <TextView 
	        android:id="@+id/tv_sina_weibo"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_toLeftOf="@id/tv_first_middler_ph"
	        android:text="@string/sina_weibo"
	        android:gravity="center"
	        android:clickable="true"
	        android:drawableLeft="@drawable/ic_sina_weibo"
	        android:layout_marginLeft="20dp"
	         style="@style/ShareTextAppearence"
	        />
	    <TextView 
	        android:id="@+id/tv_tencent_weibo"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_toRightOf="@id/tv_first_middler_ph"
	        android:text="@string/tencent_weibo"
	        android:gravity="center"
	        android:clickable="true"
	        android:drawableLeft="@drawable/ic_qq_weibo"
	        android:layout_marginLeft="20dp"
	         style="@style/ShareTextAppearence"
	        />
	</RelativeLayout>
    
	<RelativeLayout 
	    android:id="@+id/rl_second_line"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/imv_ver_middle"
	    >
	    <TextView 
	        android:id="@+id/tv_second_middler_ph"
	        android:layout_height="0dp"
	        android:layout_width="0dp"
	        android:layout_centerHorizontal="true"
	        />
	    <TextView 
	        android:id="@+id/tv_qq"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_toLeftOf="@id/tv_second_middler_ph"
	        android:text="@string/tencent_qq"
	        android:gravity="center"
	        android:clickable="true"
	        android:drawableLeft="@drawable/ic_sina_weibo"
	        android:layout_marginLeft="20dp"
	         style="@style/ShareTextAppearence"
	        />
	    <TextView 
	        android:id="@+id/tv_wechat"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_toRightOf="@id/tv_second_middler_ph"
	        android:text="@string/wechat"
	        android:gravity="center"
	        android:clickable="true"
	        android:drawableLeft="@drawable/ic_wechat"
	        android:layout_marginLeft="20dp"
	        style="@style/ShareTextAppearence"
	        />
	    
	</RelativeLayout>
</RelativeLayout>
