<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@color/list_item_bg"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp" >

    <ImageView
        android:id="@+id/imv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_des_place_holder"
        android:src="@drawable/book_icon" />
    
    <RelativeLayout
        android:id="@+id/rl_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/imv_icon" >

        <TextView
            android:id="@+id/tv_name"
            style="@style/CategoryListNameAppearence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name" />
        
        <TextView
            android:id="@+id/tv_author"
            style="@style/CategoryListAuthorAppearence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_name"
            android:text="@string/author" />
        
        <TextView
            android:id="@+id/tv_continue"
            style="@style/CategoryListAuthorAppearence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_author"
            android:text="@string/continue_read" />
        
    </RelativeLayout>
    
</RelativeLayout>
