<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
     
    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar_layout" />
    
    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/action_bar"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/content_des_place_holder"
        android:src="@color/light_gray" />
    
    <RelativeLayout 
        android:id="@+id/tab_btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider">
        <View
            android:id="@+id/middle"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/btn_downloading"
            android:layout_alignBottom="@+id/btn_downloading"
            android:background="@drawable/ic_btn_tab_divider" />
        <Button 
            android:id="@+id/btn_downloading"
            android:layout_width="0dp"
            android:minHeight="45dp"
            android:layout_marginRight="1dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/middle"
            android:text="@string/downloading_tab"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:background="@drawable/tabs_selected_default"
            />
        <Button 
            android:id="@+id/btn_downloaded"
            android:layout_width="0dp"
            android:minHeight="45dp"
            android:layout_marginLeft="1dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn_downloading"
            android:layout_alignBottom="@id/btn_downloading"
            android:layout_alignParentRight="true"
            android:layout_alignLeft="@id/middle"
            android:text="@string/downloaded_tab"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:background="@drawable/tabs_unselected_default"
            />
    </RelativeLayout>
    
    <GridView 
        android:id="@+id/gv_downloading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_btns"
        android:numColumns="3"
        android:stretchMode="columnWidth"
    	android:gravity="center"
        />
    
    <GridView 
        android:id="@+id/gv_downloaded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_btns"
        android:numColumns="3"
        android:stretchMode="columnWidth"
    	android:gravity="center"
    	android:visibility="gone"
        />
    
    <RelativeLayout 
        android:id="@+id/rl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_btns"
        android:gravity="center"
        android:visibility="gone"
        >
        <ImageView 
            android:id="@+id/imv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_no_download_items"
            android:contentDescription="@string/content_des_place_holder"
            />
        <TextView 
            android:id="@+id/tv_no_download_items_main"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/imv_empty"
			android:layout_centerHorizontal="true"
			android:text="@string/no_download_items"
			style="@style/EmptyMainTextAppearence"
            />
        
         <TextView 
            android:id="@+id/tv_no_download_items_sub"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_below="@id/tv_no_download_items_main"
			android:layout_centerHorizontal="true"
			android:text="@string/start_to_use"
			style="@style/EmptySubTextAppearence"
            />
        
    </RelativeLayout>

</RelativeLayout>
