<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar_layout" />
    
    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/action_bar"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/content_des_place_holder"
        android:src="@color/light_gray" />
    
    <ListView
        android:id="@+id/lv_cartoons_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:dividerHeight="10dp"
        android:divider="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    
    <RelativeLayout 
        android:id="@+id/rl_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:gravity="center"
        android:visibility="gone"
        >
        <ImageView 
            android:id="@+id/imv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_no_read_history"
            android:contentDescription="@string/content_des_place_holder"
            />
        <TextView 
            android:id="@+id/tv_no_download_items_main"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/imv_empty"
			android:layout_centerHorizontal="true"
			android:text="@string/no_read_history"
			style="@style/EmptyMainTextAppearence"
            />
        
         <TextView 
            android:id="@+id/tv_no_download_items_sub"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_below="@id/tv_no_download_items_main"
			android:layout_centerHorizontal="true"
			android:text="@string/start_to_use"
			style="@style/EmptySubTextAppearence"
            />
        
    </RelativeLayout>
    

</RelativeLayout>
