<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar_layout" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/action_bar"
        android:contentDescription="@string/content_des_place_holder"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@color/light_gray" />
    
    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_you_want"
            android:imeOptions="actionSearch"
            android:singleLine="true" />
        
        <ImageView 
            android:id="@+id/imv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_search"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:clickable="true"
            android:contentDescription="@string/content_des_place_holder"
            />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rl_search_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_search"
        android:layout_margin="5dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_search_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/they_are_searching" />

        <ImageView
            android:id="@+id/imv_search_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/tv_search_header"
            android:contentDescription="@string/content_des_place_holder"
            android:src="@drawable/ic_shake" />
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
	    xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/lv_books_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_search_header"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:dividerHeight="10dp"
        android:divider="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        ptr:ptrAnimationStyle="flip"
	    ptr:ptrMode="pullFromEnd" />
    
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>